# euro-fragrance.com

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: .env.example  .env.template
docker/: docker-compose.dev.yml  docker-compose.prod.yml
docker/app/: Dockerfile  entrypoint.sh
docker/app/gunicorn/: config.py  start.sh
docker/backup/: Dockerfile
docker/backup/maintenance/: backup  backups  clean  cycle  restore
docker/django/: Dockerfile  entrypoint.sh
docker/django/gunicorn/: config.py  start.sh
docker/nginx/: default.conf
server/: settings.py  urls.py
server/apps/base/: admin.py  apps.py  models.py  urls.py  views.py
server/apps/base/logic/: processors.py
server/apps/base/migrations/: 0001_initial.py
server/apps/base/templates/base/: about.html  contact.html  index.html  layout.html
server/apps/category/: admin.py  models.py  urls.py  views.py
server/apps/category/logic/: processors.py
server/apps/category/migrations/: 0001_initial.py
server/apps/product/: admin.py  models.py  urls.py  views.py
server/apps/product/logic/: querysets.py
server/apps/product/migrations/: 0001_initial.py
server/apps/product/templates/products/: product.html  shop.html
server/apps/products/: admin.py  apps.py  models.py  urls.py  views.py
server/apps/products/templates/products/: product.html  (+1 more)
server/settings/: __init__.py
server/settings/components/: __init__.py  common.py  cors.py  custom.py  database.py  healthcheck.py  logging.py
server/settings/environments/: __init__.py  dev.py  local.py  prod.py
static/assets/css/: main.css  themes.css
static/assets/js/: theme.js
static/assets/vendors/: animate.css
static/assets/vendors/bootstrap/: bootstrap.bundle.js
static/assets/vendors/counter/: countUp.js
static/assets/vendors/hc-sticky/: hc-sticky.min.js
static/assets/vendors/isotope/: isotope.js
static/assets/vendors/jquery-ui/: jquery-ui.min.css  jquery-ui.min.js
static/assets/vendors/magnific-popup/: jquery.magnific-popup.min.js  magnific-popup.min.css
static/assets/vendors/mapbox-gl/: mapbox-gl.js
static/assets/vendors/slick/: slick.min.css
static/assets/vendors/waypoints/: jquery.waypoints.min.js
(+5 files in other folders)
