[tool.poetry]
name = "eurofragrance"
version = "0.1.0"
description = "Euro Fragrance Webiste"
authors = ["Tarlan Soltanov <tarlansoltanov@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.7"
pillow = "^9.4.0"
python-decouple = "^3.8"
psycopg2 = "^2.9.5"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
